# cellij

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/: codecov.yml
.github/workflows/: black.yml  build.yml  package.yml  test.yml
cellij/: __init__.py  models.py  utils.py
cellij/benchmark/: generate.py  train.py
cellij/core/: __init__.py  _data.py  _dist.py  _factormodel.py  _gp.py  _group.py  _priors.py  _pyro_guides.py  _pyro_models.py  _pyro_models_before_refactor.py  _pyro_priors.py  constants.py  factormodel.py  models.py  priors.py  sparsity_priors.py  synthetic.py  utils.py  utils_training.py
cellij/data/: gp_view1.csv  gp_view2.csv  gp_view3.csv  gp_view4.csv  id_to_drug_names.csv
cellij/tools/: __init__.py  evaluation.py  inspect.py
demo/: Code_for_iterim_presentation.ipynb  Using_mofax_with_MFMF.ipynb
docs/: api.md  conf.py  contributing.md  references.bib  template_usage.md
docs/notebooks/: example.ipynb
experiments/sparsity_benchmark/: benchmark.sh  mofa_cll_eval.py  mofa_cll_train.py  mofa_cll_train_v2.py  mofa_fac_eval.py  mofa_fac_train.py  mofa_feat_eval.py  mofa_feat_eval_2.py  mofa_feat_train.py  mofa_feat_train_high_n_factors.py  mofa_features.py  mofa_missing_eval.py  mofa_missing_train.py  mofa_samples_train.py
mfmf/: __init__.py  utils.py
mfmf/modules/: __init__.py  core.py  covariances.py  data.py  distributions.py  importer.py  loss.py  metrics.py  models.py  mofax_support.py
notebooks/: basic_example_mofa.ipynb  basic_svi.ipynb  cellij_1D_gp.ipynb  cellij_2D_gp.ipynb  cellij_gp.ipynb  evaluation.ipynb  example.ipynb  mofa.ipynb  mofa_synthetic.ipynb  muvi.ipynb  new_gp.ipynb  synthetic.ipynb
src/cellij/: guides.py  models.py
src/cellij/tl/: synthetic.py
test/: test_utils.py
test/modules/: test_core.py  test_data.py  test_importer.py  test_metrics.py  test_mofax_support.py
tests/: test_basic.py  test_utils.py
tests/core/: test_data.py  test_gp.py  test_models.py  test_pyro_models.py
tests/tools/: test_evaluations.py  test_inspect.py
