[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "cellij"
version = "0.0.1"
description = " Implementation of a Modular Multi-Omics Factor Model Framework "
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Tim Treis"},
    {name = "Martin Rohbeck"},
    {name = "Arber Qoku"},
]
maintainers = [
    {name = "Tim Treis", email = "tim.treis@helmholtz-muenchen.de"},
    {name = "Martin Rohbeck", email = "martin.rohbeck@dkfz-heidelberg.de"},
    {name = "Arber Qoku", email = "arber.qoku@dkfz-heidelberg.de"},
]
urls.Documentation = "https://cellij.readthedocs.io/"
urls.Source = "https://github.com/bioFAM/cellij"
urls.Home-page = "https://github.com/bioFAM/cellij"
dependencies = [
    "anndata",
    # for debug logging (referenced from the issue template)
    "session-info"
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit",
    "twine>=4.0.2"
]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["cellij"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
